--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <img src="./balloon-right.3d8e6ef1.png" alt="balloon-right" class="balloon balloon--right" />
         <div class="frame">
             <div class="img-back">
-                <div class="bd-pic"></div>
+                <div class="bd-pic" src="wndy.jpeg"></div>
                 <img class="cap" src="./bday-cap.185a2e6a.svg" alt="" />
                 <img class="confetti" src="./confetti.ed35843d.svg" alt="" />
                 <img class="cake" src="./cake.a93e912c.svg" alt="" />
